<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mainBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/apple1"
        android:scaleType="centerCrop"/>



    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="23sp"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textColorHint="#ffffff"
        android:textStyle="bold"
        android:hint="@string/name"
        android:textColor="#ffffff"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weight"
        android:inputType="text"
        android:textAlignment="center"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textColorHint="#fff"
        android:hint="@string/weight"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/height"
        android:inputType="text"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_below="@id/weight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColorHint="#fff"
        android:textColor="#fff"
        android:textStyle="bold"
        android:hint="@string/height"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        >
        <RadioButton
            android:id="@+id/feet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:text="@string/feet"/>
        <RadioButton
            android:id="@+id/meter"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meters"/>

        
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:layout_below="@id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/submit"
        />

</RelativeLayout>