<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".normalWeight">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/normal"
        android:scaleType="centerCrop"
        android:id="@+id/normalBackground"/>

    <TextView
        android:id="@+id/normalWeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="#ff0000"
        android:background="#000000"
        android:textStyle="bold"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="20sp"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/normalWeightComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="350dp"
        android:text="@string/normalWeightComments"
        android:textAlignment="center"
        android:background="#000000"
        android:textColor="#ffff00"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/linkNormalWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/normalWeightComments"
        android:layout_marginTop="30dp"
        android:text="@string/linkUnderWeight"
        android:textColor="#ff0000"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="15dp"
        android:text="@string/checkAnother"
        android:onClick="checkAnother"/>




</RelativeLayout>