<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".overWeight">

    <ImageView
        android:id="@+id/overWeightBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/overweight"
        />
    <TextView
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textAlignment="center"
        android:id="@+id/overWeightResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="20sp"

        />


    <TextView
        android:id="@+id/overWeightComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/overWeightResult"
        android:background="#000"
        android:textColor="#fff"
        android:text="@string/overWeightComments"
        android:textAlignment="center"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/linkOverWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="@string/linkOverWeight"
        android:textSize="25sp"
        android:textColor="#ff0000"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkAnotherButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/checkAnother"
        android:onClick="checkAnother"/>



</RelativeLayout>