<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".obesityClass2">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/obesityClass2Background"
        android:src="@drawable/obesity2"
        android:scaleType="centerCrop"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/obesityClass2Results"
        android:textSize="20sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#ffff00"
        android:textColor="#ff0000"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/obesityClass2Results"
        android:id="@+id/obesityClass2Comments"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:text="@string/obesityClass2Comments"
        android:textColor="#333"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/linkObesityClass2"
        android:text="@string/linkObesityClass2"
        android:textSize="20sp"
        android:textColor="#ff0000"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/checkAnother"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/checkAnother"
        android:onClick="checkAnother"/>







</RelativeLayout>