<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".extremeObesity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/extremeObesityBackground"
        android:src="@drawable/extremeobese"
        android:scaleType="centerCrop"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/extremeObesityResult"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textAlignment="center"
        android:background="#000"
        android:textColor="#ff0000"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/extremeObesityComments"
        android:background="#fff"
        android:textColor="#333"
        android:id="@+id/extremeObesityComments"
        android:textAlignment="center"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linkExtremeObesity"
        android:layout_below="@id/extremeObesityComments"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="#ff0000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/linkExtremeObesity"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkAnother"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/checkAnother"
        android:onClick="checkAnother"/>


</RelativeLayout>