<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".underweight">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/underweight"
        android:scaleType="center"
        android:id="@+id/underWeightImage"/>
    <TextView
        android:id="@+id/underWeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textColor="#ff0000"
        android:background="#000000"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/underWeightComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/underWeightText"
        android:layout_marginTop="70dp"
        android:text="@string/underWeightComments"
        android:textAlignment="center"
        android:background="#000000"
        android:textColor="#ffff00"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/linkUnderWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/underWeightComments"
        android:layout_marginTop="40dp"
        android:text="@string/linkUnderWeight"
        android:textColor="#ff0000"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/checkAnotherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/checkAnother"
        android:onClick="checkAnother"/>

</RelativeLayout>