<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".obesityClass1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/obesityClass1Background"
        android:src="@drawable/obesity1"
        android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="20sp"
        android:background="#ffff00"
        android:textColor="#ff0000"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/obesityClass1Results"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/obesityClass1Comments"
        android:layout_below="@id/obesityClass1Results"
        android:layout_centerHorizontal="true"
        android:text="@string/obesityClass1Comments"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="40dp"
        android:background="#000"
        android:textColor="#00ffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linkObesityClass1"
        android:textSize="25sp"
        android:text="@string/linktoObesityClass1"
        android:textColor="#ff0000"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        />

    <Button
        android:id="@+id/checkAnother"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/checkAnother"
        android:onClick="checkAnother"/>



</RelativeLayout>